# Stellar

./: Cargo.toml  deny.toml
application/: Cargo.toml
application/src/: errors.rs  lib.rs  services.rs
application/src/services/: user.rs
driver/: Cargo.toml
frontend/: package.json  pnpm-lock.yaml  svelte.config.js
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/static/: index.html
frontend/static/_app/: version.json
frontend/static/_app/immutable/assets/: 2.DppVVb_G.css  _page.DdtZnUW2.css
frontend/static/_app/immutable/chunks/: entry.C4TFVX6C.js
frontend/static/_app/immutable/entry/: app.DMx3KUVA.js  start.JUk0mmY3.js
frontend/static/_app/immutable/nodes/: 1.kPgN6Nyn.js  2.Df6CKL6i.js
kernel/: Cargo.toml
kernel/src/: command.rs  entities.rs  errors.rs  lib.rs  services.rs
kernel/src/command/: user.rs  user_tmp.rs
kernel/src/entities/: client.rs  user.rs  user_tmp.rs
kernel/src/entities/client/: id.rs  redirects.rs  scopes.rs
kernel/src/entities/user/: address.rs  factor_code.rs  id.rs  name.rs  pass.rs
kernel/src/event/: user.rs  user_tmp.rs
kernel/src/services/: actor.rs  mail.rs
server/: Cargo.toml
server/src/: errors.rs  lib.rs  logging.rs  main.rs
