[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "^1", features = ["serde", "v4", "v7"] }
serde = { version = "^1", features = ["derive"] }

thiserror = "^1"

destructure = "^0.5.6"
