[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "^1", features = ["serde", "v4", "v7"] }
serde = { version = "^1", features = ["derive"] }

rand = { version = "0.8.5", features = ["getrandom"] }
argon2 = { version = "0.5.3", features = ["default", "std"] }

thiserror = "^1"

error-stack = "^0.5"

destructure = "^0.5.6"

once_cell = "^1"

lutetium = { workspace = true }