[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
publish = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "^0.1"
uuid = { version = "^1", features = ["serde", "v4", "v7"] }

serde = { version = "^1", features = ["derive"] }
flatbuffers = "24.3.25"
flexbuffers = "2.0.0"

rand = { version = "0.8.5", features = ["getrandom"] }
argon2 = { version = "0.5.3", features = ["default", "std"] }

thiserror = { workspace = true }
error-stack = { workspace = true }
async-trait = { workspace = true }

destructure = "^0.5.6"

once_cell = "^1"

lutetium = { workspace = true, features = ["persistence"] }

[dev-dependencies]
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
tokio = { version = "^1", features = ["test-util"] }