[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1", features = ["full"] }

axum = { version = "^0.7", features = ["query", "json", "form", "tracing"] }

tower-http = { version = "^0.5", features = ["fs", "trace"] }

error-stack = "^0.5"

tracing = "^0.1"
tracing-appender = "^0.2"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
